--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,21 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
+/* Other global styles */
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+    /* font-family: 'Bangers', sans-serif; */
 }
